# health-data-factory

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  continuous-ingestion.yml  deploy.yml  nightly-build.yml  publish-platforms.yml
apps/api/: main.py  models.py
connectors/: __init__.py  base.py  http_file.py  local_file.py
datasets/: registry.yaml
docs/: COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md
docs/adrs/: ADR-0001-uv.md  ADR-0002-prefect.md  ADR-0003-pandera.md  ADR-0004-dvc.md  ADR-0005-canonical-schema.md
exporters/: fhir.py  omop.py
infra/docker/: Dockerfile.api  Dockerfile.pipeline
pipelines/: engine.py  flows.py  modeling.py
src/hdb/: __init__.py  __main__.py  cli.py  codebook.py  logging_config.py  manifest.py  pii.py  publish.py  registry.py  settings.py
tests/unit/: test_api_tb.py  test_connector.py  test_continuous.py  test_engine.py  test_exporters.py  test_local_connector.py  test_manifest.py  test_modeling.py  test_pii.py  test_publish.py  test_registry.py  test_tb_transform.py
transforms/: canonical.py
validators/: checks.py  schemas.py
